# advent-of-code

./: .gitignore
2020/scala/: build.sbt
2020/scala/project/.bloop/: scala-build.json
2020/scala/project/project/.bloop/: scala-build-build.json
2020/scala/src/main/scala/: day04.scala  file.scala
2020/scala/src/test/scala/: day04tests.scala
2020/scala3/project/.bloop/: scala3-build.json
2020/scala3/project/project/.bloop/: scala3-build-build.json
2020/scala3/src/main/scala/: Main.scala
2021/haskell/day01/: CHANGELOG.md  LICENSE  README.md  day01.cabal
2021/haskell/day01/app/: Main.hs
2021/java/01/: .project  settings.gradle
2021/java/01/app/: build.gradle
2021/java/01/app/src/main/java/org/vpetro/day01/: App.java
2021/python/01/: part1.py  part2.py
2021/python/02/: part1.py  part2.py
2021/python/03/: part1.py  part2.py
2021/python/04/: part1_2.py
2021/python/05/: part1.py  part1_2.py
2021/python/06/: part1.py  part2.py
2021/python/07/: part1_2.py
2022/scala/01/: build.sbt
2022/scala/01/src/main/scala/: Main.scala
2022/scala/01/src/test/scala/: basic.scala
2022/scala/02/: build.sbt
2022/scala/02/src/main/scala/: Main.scala
2022/scala/02/src/test/scala/: Basic.scala
scala/: build.sbt
scala/src/main/scala/: day01.scala  day02.scala  day03.scala  day04.scala
scala/src/test/scala/: day04tests.scala
