cabal-version:       2.4
name:                day01
version:             0.0.0.0
synopsis:            Advent of Code 2021 - Day 1
description:         Advent of Code 2021 - Day 1
license:             MIT
license-file:        LICENSE
author:              Petro Verkhogliad
maintainer:          Petro Verkhogliad <vpetro@gmail.com>
copyright:           2022 Petro Verkhogliad
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable day01
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite day01-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
